추가수정 메타이미지 추가

--- a/05_survey/survey_all.html
+++ b/05_survey/survey_all.html
@@ -639,7 +639,7 @@
 			<h2 id="s_p_all_84">서베이가 완료되었습니다.</h2>
 			<p id="s_p_all_85">GF층에 방문하여 리워드를 수령하세요.</p>
 			<div class="pop_bottom_btns">
-				<button onclick="location.href='../board_list_04.html'" id="btn_survey_end" class="ok_circle btn_pop_circle">닫기</button>
+				<button onclick="location.href='../03_mission/board_list_04.html'" id="btn_survey_end" class="ok_circle btn_pop_circle">닫기</button>
 			</div>
 		</div>
 	</div>
