--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="./css/utility.css">
 	<link rel="stylesheet" href="./css/components.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<meta property="og:image" content="./image/common/mata_img_800x400.png">
 	<script src="./js/jquery-3.5.1.min.js"></script>
 	<script src="./js/script.js"></script>
 	<!-- 사이트 최초 1회 진입시 스플래시 화면이 잠깐 나타났다 사라지는 스플래시 화면을
