--- a/no_visitor/vet.html
+++ b/no_visitor/vet.html
@@ -29,12 +29,12 @@
 				<div class="m_dropdown_menu">
 					<button class="current">Trang chủ</button>
 					<nav>
-						<button id="gnb_section00_m" onclick="scrollTopSec('sec01_info')">Trang chủ</button>
-						<button id="gnb_section01_m" onclick="scrollTopSec('sec02_map')">Vị trí</button>
-						<button id="gnb_section02_m" onclick="scrollTopSec('sec03_time')">Thời gian hoạt động</button>
-						<button id="gnb_section03_m" onclick="scrollTopSec('sec04_floor')">Hướng dẫn theo tầng</button>
-						<button id="gnb_section04_m" onclick="scrollTopSec('sec05_guide')">Mobile Guide</button>
-						<button id="gnb_section05_m" onclick="scrollTopSec('sec06_event')">Sự kiện</button>
+						<button id="gnb_section00_m" onclick="scrollTopSec('sec01_info')" ontouchstart="">Trang chủ</button>
+						<button id="gnb_section01_m" onclick="scrollTopSec('sec02_map')" ontouchstart="">Vị trí</button>
+						<button id="gnb_section02_m" onclick="scrollTopSec('sec03_time')" ontouchstart="">Thời gian hoạt động</button>
+						<button id="gnb_section03_m" onclick="scrollTopSec('sec04_floor')" ontouchstart="">Hướng dẫn theo tầng</button>
+						<button id="gnb_section04_m" onclick="scrollTopSec('sec05_guide')" ontouchstart="">Mobile Guide</button>
+						<button id="gnb_section05_m" onclick="scrollTopSec('sec06_event')" ontouchstart="">Sự kiện</button>
 					</nav>
 				</div>
 			</div>
@@ -608,6 +608,10 @@
 						$('.m_dropdown_menu .current').text(newButtonText);
 					}
 				}, 150); // 타이머 지연 시간 (예: 150 밀리초)
+			});
+
+			$(".m_dropdown_menu button").on('click touchstart', function() {
+				scrollTopSec($(this).attr('id').replace('_m', ''));
 			});
 		});
 
