--- a/no_visitor/vet.html
+++ b/no_visitor/vet.html
@@ -29,12 +29,12 @@
 				<div class="m_dropdown_menu">
 					<button class="current">Trang chủ</button>
 					<nav>
-						<button id="gnb_section00_m" onclick="scrollTopSec('sec01_info')" ontouchstart="">Trang chủ</button>
-						<button id="gnb_section01_m" onclick="scrollTopSec('sec02_map')" ontouchstart="">Vị trí</button>
-						<button id="gnb_section02_m" onclick="scrollTopSec('sec03_time')" ontouchstart="">Thời gian hoạt động</button>
-						<button id="gnb_section03_m" onclick="scrollTopSec('sec04_floor')" ontouchstart="">Hướng dẫn theo tầng</button>
-						<button id="gnb_section04_m" onclick="scrollTopSec('sec05_guide')" ontouchstart="">Mobile Guide</button>
-						<button id="gnb_section05_m" onclick="scrollTopSec('sec06_event')" ontouchstart="">Sự kiện</button>
+						<button id="gnb_section00_m" onclick="scrollTopSec('sec01_info')" ontouchstart="scrollTopSec('sec01_info')">Trang chủ</button>
+						<button id="gnb_section01_m" onclick="scrollTopSec('sec02_map')" ontouchstart="scrollTopSec('sec02_map')">Vị trí</button>
+						<button id="gnb_section02_m" onclick="scrollTopSec('sec03_time')" ontouchstart="scrollTopSec('sec03_time')">Thời gian hoạt động</button>
+						<button id="gnb_section03_m" onclick="scrollTopSec('sec04_floor')" ontouchstart="scrollTopSec('sec04_floor')">Hướng dẫn theo tầng</button>
+						<button id="gnb_section04_m" onclick="scrollTopSec('sec05_guide')" ontouchstart="scrollTopSec('sec05_guide')">Mobile Guide</button>
+						<button id="gnb_section05_m" onclick="scrollTopSec('sec06_event')" ontouchstart="scrollTopSec('sec06_event')">Sự kiện</button>
 					</nav>
 				</div>
 			</div>
