집에서 작업했던거 커밋

--- a/04_event/view_03.html
+++ b/04_event/view_03.html
@@ -64,9 +64,9 @@
 						<label for="event_chk_1_1" class="chk">
 							<input type="checkbox" name="event_chk_1" id="event_chk_1_1">
 							<span class="chkmark"></span>
-							<span class="chkText" id="ev_v_chktext">이벤트 활용 동의</span>
+							<span class="chkText" id="ev_v_chktext">Personal Information Collection and Usage Agreement</span>
 						</label>
-						<button id="ev_v_chkbtn" class="chk_poptext" onclick="popupOpen('pop_event1')" type="button">상세 보기</button>
+						<!-- <button id="ev_v_chkbtn" class="chk_poptext" onclick="popupOpen('pop_event1')" type="button">상세 보기</button> -->
 					</div>
 				</div>
 				<!-- 참여완료 했을때는 버튼이 disabled="disabled" 되며, 텍스트가 바뀝니다.
