--- a/admin/01_dashboard/dashboard.html
+++ b/admin/01_dashboard/dashboard.html
@@ -252,7 +252,7 @@
 				<h3 class="adm_top_title inblock" id="dash_trend">트렌드</h3>
 				<div class="bg_w" style="width:calc(100% - 120px);">
 					<div class="canvas_wrap">
-						<canvas id="line-chart" style="width: 100%; height: 340px;" ></canvas>
+						<canvas id="line-chart"></canvas>
 						<div id="js-legend" class="chart-legend" ></div>
 					</div>
 				</div>
@@ -431,7 +431,8 @@
 			]
 		},
 		options: {
-			responsive: false,
+			responsive: true,
+			maintainAspectRatio: false,
 			title: {
 				display: false,
 				text: '트렌드 라인차트'
