--- a/no_visitor/index.html
+++ b/no_visitor/index.html
@@ -160,6 +160,16 @@
 								</p>
 							</div>
 						</div>
+						<div class="slide roundbox">
+							<figure class="slide_img" style="background-image: url('./image/img_info_gf_03.png');"><a href="https://cacaoland.vn/" target="_blank" class="slide_link">LINK</a></figure>
+							<div class="slide_cont">
+								<h5>Cacao Land</h5>
+								<h6>Good Friend #2</h6>
+								<p>
+									A journey that encapsulates the quintessence born from the LAND, weaving together the meticulous patience of PEOPLE and the muddy color of CREATIVE footprints, all blended in one continuous effort of Cacao Land Vietnam. Cacao Land Vietnam is a pioneering brand in the beverage chain about cocoa, creating and honoring Vietnamese cocoa products.
+								</p>
+							</div>
+						</div>
 					</div>
 					<!-- floor_g_slide end -->
 				</div>
@@ -206,7 +216,7 @@
 							<figure class="slide_img" style="background-image: url('./image/img_info_1f_04.png');"><a href="https://vnggames.com/vn/en" target="_blank" id="link_1f_04" class="link_vng_eng slide_link">LINK</a></figure>
 							<div class="slide_cont">
 								<h5>VNGGames</h5>
-								<h6>Good Friend #2</h6>
+								<h6>Good Friend #3</h6>
 								<p>
 									Come to enjoy experience the trendiest FPS game title - VALORANT in the gaming lounge brought to you by VNGGames and LGE. Various exclusive gifts are waiting for you!
 								</p>
