--- a/no_visitor/vet.html
+++ b/no_visitor/vet.html
@@ -151,6 +151,16 @@
 								</p>
 							</div>
 						</div>
+						<div class="slide roundbox">
+							<figure class="slide_img" style="background-image: url('./image/img_info_gf_03.png');"><a href="https://cacaoland.vn/" target="_blank" class="slide_link">LINK</a></figure>
+							<div class="slide_cont">
+								<h5>Cacao Land</h5>
+								<h6>Good Friend #2</h6>
+								<p>
+									Một hành trình gói gọn tinh hoa được nảy sinh từ ĐẤT, đan kết sự kiên nhẫn chắt chiu của NGƯỜI và màu bùn đất lấm lem của những dấu chân SÁNG TẠO, tất cả hòa quyện trong một nỗ lực không ngừng của Cacao Land Vietnam. Cacao Land là thương hiệu tiên phong về chuỗi thức uống về cacao, sáng tạo và tôn vinh sản phẩm cacao Việt Nam.
+								</p>
+							</div>
+						</div>
 					</div>
 					<!-- floor_g_slide end -->
 				</div>
@@ -198,7 +208,7 @@
 							<figure class="slide_img" style="background-image: url('./image/img_info_1f_04.png');"><a href="https://vnggames.com/vn/vi" target="_blank" id="link_1f_04" class="link_vng_vet slide_link">LINK</a></figure>
 							<div class="slide_cont">
 								<h5>VNGGames</h5>
-								<h6>Good Friend #2</h6>
+								<h6>Good Friend #3</h6>
 								<p>
 									Cùng đến và trải nghiệm VALORANT, tựa game bắn súng hot nhất, tại gaming lounge đồng tổ chức bởi VNGGames và LGE. Hàng ngàn món quà độc quyền đang chờ đợi bạn!
 								</p>
